--- a/common/components/ChapterForm.scss
+++ b/common/components/ChapterForm.scss
@@ -20,3 +20,11 @@
   text-align: center;
   transition: color $animation-duration $animation-curve-default;
 }
+
+.card {
+  margin-top: 5rem;
+}
+
+.cardContent {
+  padding: 2rem;
+}
