allow invite codes to be added to chapters

--- a/common/components/ChapterForm.scss
+++ b/common/components/ChapterForm.scss
@@ -20,3 +20,7 @@
   text-align: center;
   transition: color $animation-duration $animation-curve-default;
 }
+
+.button {
+  margin-left: $input-icon-offset;
+}
