highlight votes by current player

--- a/common/components/Vote.css
+++ b/common/components/Vote.css
@@ -2,11 +2,15 @@
   min-width: 2rem;
 }
 
-// if the goal name is too long, truncate it
+/* if the goal name is too long, truncate it */
 .goalName {
   font-size: 1.6rem;
   display: block;
   flex-grow: 1;
   overflow-x: hidden;
   text-overflow: ellipsis;
+}
+
+.voted {
+  background-color: #ccd3ff;
 }
