--- a/common/components/VoteList.css
+++ b/common/components/VoteList.css
@@ -5,6 +5,18 @@
 }
 
 .progress {
-  font-size: 1rem;
+  font-size: 1.2rem;
   width: 100%;
+}
+
+.percentage {
+  color: #3f51b5;
+}
+
+.open {
+  color: green;
+}
+
+.closed {
+  color: red;
 }
