--- a/common/components/CandidateGoal.css
+++ b/common/components/CandidateGoal.css
@@ -1,5 +1,9 @@
 .rightAction {
-  min-width: 2rem;
+  min-width: 1.5rem;
+}
+
+.voted {
+  background-color: #ccd3ff;
 }
 
 /* if the goal name is too long, truncate it */
@@ -10,7 +14,48 @@
   overflow-x: hidden;
   text-overflow: ellipsis;
 }
+.goalNumber {
+  font-weight: 500;
+  color: #3f51b5;
+}
+.goalTitle a {
+  color: #212121;
+}
 
-.voted {
-  background-color: #ccd3ff;
+.goalRank {
+  width: 30px;
+  height: 22px;
+  border-radius: 11px;
+  padding-top: 2px;
+  text-align: center;
+  font-weight: 500;
+  background-color: white;
+  color: #3f51b5;
+}
+.goalRank .placement {
+  font-size: 0.7em;
+}
+
+.avatar {
+  width: 22px;
+  height: 22px;
+  background: white;
+}
+.initials {
+  font-size: 0.5em;
+  font-weight: 500;
+  color: #3f51b5;
+  padding-top: 3px;
+}
+
+.voteCount {
+  width: 22px;
+  height: 22px;
+  background-color: pink;
+  border-radius: 11px;
+  padding-top: 2px;
+  text-align: center;
+  font-weight: 500;
+  background-color: #3f51b5;
+  color: white;
 }
