--- a/common/components/SurveyFormInputSliderGroup.css
+++ b/common/components/SurveyFormInputSliderGroup.css
@@ -1,8 +1,13 @@
-.sliderItem {
+.inputContainer {
   height: 60px;
-  margin-bottom: 5px;
+  margin-bottom: 20px;
 }
-.sliderItemChild {
+
+.subjectChip {
   width: 100%;
   height: 100%;
+}
+
+.slider {
+  width: 100%;
 }
