retro: ui: relative contrib. style updates

--- a/common/containers/RetroSurvey.css
+++ b/common/containers/RetroSurvey.css
@@ -5,6 +5,10 @@
 .header {
   margin-bottom: 20px;
 }
+.headerTitle {
+  font-size: 2em;
+  margin-bottom: 5px;
+}
 .headerSubtitle {
   color: grey;
 }
