--- a/common/components/UserGrid/index.css
+++ b/common/components/UserGrid/index.css
@@ -1,6 +1,6 @@
 .userGrid {
   display: flex;
-  align-items: left;
+  align-items: flex-start;
   align-content: flex-end;
   justify-content: flex-start;
   flex-direction: row;
