--- a/common/components/VotingPoolResults/index.css
+++ b/common/components/VotingPoolResults/index.css
@@ -14,3 +14,21 @@
 .closed {
   color: red;
 }
+
+.title {
+  font-weight: 500;
+  color: #757575;
+}
+
+.userGrid * {
+  /*
+   * make sure that, as the goals are animated to slide-down, they do so
+   * behind the user grid
+   */
+  z-index: 1;
+  background: white;
+}
+
+.toggleControl {
+  cursor: pointer;
+}
