minor pool UI fixes:
* get pool name to use in UI
* use a block style for the VotingPoolResults element, so that they
appear one on top of the other.

--- a/common/components/VotingPoolResults/index.css
+++ b/common/components/VotingPoolResults/index.css
@@ -20,6 +20,10 @@
   color: #757575;
 }
 
+.votingPoolResults {
+  display: block
+}
+
 .userGrid * {
   /*
    * make sure that, as the goals are animated to slide-down, they do so
