--- a/common/containers/RetroSurvey/index.css
+++ b/common/containers/RetroSurvey/index.css
@@ -3,15 +3,6 @@
   height: 100%;
 }
 
-.projectListHeader {
-  margin-bottom: 20px;
-  font-size: 1.3em;
-}
-.projectListItem {
-  margin: 10px 0;
-  font-size: 1.1em;
-}
-
 .header {
   margin-bottom: 20px;
 }
@@ -22,8 +13,23 @@
 .headerSubtitle {
   color: grey;
 }
+.headerDivider {
+  height: 2px;
+  background-color: #cccccc;
+}
 .playbookLink {
   font-size: 0.8em;
   font-style: italic;
   color: grey;
+}
+
+.projectListPrompt {
+  margin: 20px 0;
+  color: grey;
+  font-size: 1.2em;
+}
+.projectListItem {
+  margin: 10px 0;
+  padding-left: 10px;
+  font-size: 1.1em;
 }
