unlock surveys: hook-up front-end

--- a/common/components/ProjectUserSummary/index.scss
+++ b/common/components/ProjectUserSummary/index.scss
@@ -44,3 +44,13 @@
 .userLink:hover {
   text-decoration: underline;
 }
+
+.theme__toggle__1Zy-o {
+  background: transparent;
+  border-radius: 50%;
+}
+
+.lock_buttons {
+  margin-left: -1.2rem;
+  margin-top: -0.8rem;
+}
