unlock surveys: don't use React state; always use redux store

--- a/common/components/ProjectUserSummary/index.scss
+++ b/common/components/ProjectUserSummary/index.scss
@@ -50,7 +50,8 @@
   border-radius: 50%;
 }
 
-.lock_buttons {
+.lockButtons {
   margin-left: -1.2rem;
   margin-top: -0.8rem;
+  cursor: pointer;
 }
