--- a/common/components/ProjectUserSummary/index.scss
+++ b/common/components/ProjectUserSummary/index.scss
@@ -55,3 +55,9 @@
   margin-top: -0.8rem;
   cursor: pointer;
 }
+.lockButtonsWait {
+  width: 24px;
+  height: 24px;
+  margin-top: 0.8rem;
+  margin-right: 1.2rem;
+}
