set primary and secondary color to match LG brand

--- a/common/containers/App/_theme.scss
+++ b/common/containers/App/_theme.scss
@@ -2,8 +2,8 @@
  * (shamelessly copied from https://github.com/react-toolbox/react-toolbox/tree/dev/docs) */
 @import "node_modules/react-toolbox/lib/_colors"; // Import minimal colors
 
-$color-primary: $palette-indigo-500;
-$color-primary-dark: $palette-indigo-700;
+$color-primary: #00A3DF;
+$color-primary-dark: #00A3DF;
 $color-primary-light: $palette-indigo-500;
 $color-accent: $palette-pink-a200;
 $color-accent-dark: $palette-pink-700;
