survey submission updates: - add new survey submission mutation, resolver, action
- replace `surveyResponseSubmitted` worker with `surveySubmittedWorker`

- explicitly record survey completion for project review submission

- survey confirmation page & use of standalone submit API endpoint

- restore survey completion check for CLI proj review responses; some refactoring

- block survey complilation/return for direct project retro requests

- survey submission tweaks, fixes

- do not use thinky models for changefeeds (if needing more than the new val)

- disable confirmation page buttons while submitting

- survey submission: test updates

- remove old/duplicate survey complete recording logic

- remove cycle & project state filters from `findOpenRetroSurveysForPlayer`

- move confirmation page content into main survey

- update `findOpenRetroSurveysForPlayer()` tests

--- a/common/containers/RetroSurvey/index.css
+++ b/common/containers/RetroSurvey/index.css
@@ -36,6 +36,24 @@
   font-size: 1.1em;
 }
 
+.confirmation {
+  padding: 20px 0;
+}
+
+.confirmationSection {
+  margin: 15px 0;
+  max-width: 440px;
+  text-align: center;
+}
+.confirmationSectionLight {
+  font-style: italic;
+  font-weight: lighter;
+}
+
+.underline {
+  text-decoration: underline;
+}
+
 .empty {
   height: 100%;
   width: 100%;
