Allow moderators to deactivate users from the UI
Adds a deactivate button to UserDetail when viewed by a moderator
Adds a client side deactivateUser mutation to call the server
Adds a server side deactivateUser mutation to call IDM
Adds a fetch to heroku to remove collaborator access to guild apps
Adds a fetch to github to remove collaborator access to guild orgs
Adds a fetch to slack SCIM to remove access to the chat service
Refactors stubs for all services and adds stubs for missing services

--- a/common/components/UserDetail/index.scss
+++ b/common/components/UserDetail/index.scss
@@ -1,9 +1,14 @@
+@import "../../theme.scss";
+
 .userDetail {
   margin-top: 20px;
 }
 
 .sidebar {
   .section {
+    margin-top: 20px;
+  }
+  .controls {
     margin-top: 20px;
   }
 }
@@ -25,4 +30,12 @@
 
 .nowrap {
   white-space: nowrap;
+}
+
+.deactivateButton {
+  border-radius: 4px;
+  border: none;
+  background-color: $color-dark-red;
+  color: white;
+  padding: 10px;
 }
