calculate and display old and new XP side-by-side for staff
Continue using old XP for everything.

--- a/common/components/ProjectUserSummary/index.scss
+++ b/common/components/ProjectUserSummary/index.scss
@@ -15,6 +15,10 @@
   .subcolumn {
     margin-right: 10px;
   }
+  .hiddenStats {
+    color: #00A3DF;
+    font-style: italic;
+  }
 }
 
 .evaluation {
