Adds coaching tab to user detail page

--- a/common/components/UserDetail/index.scss
+++ b/common/components/UserDetail/index.scss
@@ -24,6 +24,14 @@
 .tabs {
   width: 100%;
 }
+
+.noCoachedProjects {
+  color: #9e9e9e;
+  text-align: center;
+  font-family: Roboto, sans-serif;
+  margin-top: 20px;
+}
+
 .tabContent {
   padding: 1.7rem 1.2rem;
 }
